# repro_stackb_py_proto_deps

./: BUILD  README.md  WORKSPACE  versions.bzl
rt/fourth_party/: stackb_rules_proto.hack_for_issue_221.patch
rt/fourth_party/gazelle/: includes.patch
rt/proto/libs/libprotos/: BUILD.bazel
rt/proto/libs/libprotos/arm_control_module/: BUILD.bazel  arm_control_config.proto
rt/proto/libs/libprotos/bdprotos/robot/: BUILD.bazel  RobotConfig.proto
